<?xml version="1.0"?>
<package format="3">
  <name>ros2_bag_exporter</name>
  <version>1.0.0</version>
  <description>ROS 2 Bag Exporter Package</description>

  <maintainer email="hcruzgo@ed.ac.uk">Hector Cruz</maintainer>
  <maintainer email="alex.bordallo@ed.ac.uk">Alejandro Bordallo</maintainer>

  <license>Apache License 2.0</license>

  <!-- Build dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Runtime dependencies -->
  <depend>ament_index_cpp</depend>
  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>opencv</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_io</depend>
  <depend>rclcpp</depend>
  <depend>rosbag2_cpp</depend>
  <depend>rosbag2_storage</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>yaml-cpp</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
